syntax = "proto3";

package com.openops.common.msg;

option java_outer_classname = "ProtoMsgFactory";

import public "google/protobuf/timestamp.proto";

message ProtoMsg {
    /*消息类型*/
    enum HeadType {
        AUTH_REQUEST = 0; // 登陆验证请求
        AUTH_RESPONSE = 1; // 登录验证响应
        HEARTBEAT_REQUEST = 2;  // 心跳请求
        HEARTBEAT_RESPONSE = 3;  // 心跳响应
        COMMAND_EXECUTE_REQUEST = 4; // 命令执行请求
        COMMAND_EXECUTE_RESPONSE = 5;  // 命令执行响应
        CLIENT_MANAGER_REQUEST = 6;  // 客户端管理请求
        CLIENT_MANAGER_RESPONSE = 7;  // 客户端管理响应
        MESSAGE_NOTIFICATION = 8;
    }

    /*登陆验证请求*/
    message AuthRequest {
        string token = 1;    // 用户token
        string platform = 2; // 客户端操作系统版本
        string clientVersion = 3;  // 客户端版本
        string clientId = 4;
    }

    /*登陆验证响应*/
    message AuthResponse {
        uint32 code = 1;
        string info = 2;
    }

    /*命令执行请求请求*/
    message CommandExecuteRequest {
        repested string host = 1;
        string cmd = 2;
        string user = 3;
        int64 timeout = 4;
        int32 priority = 5;
        string uuid = 6;
    }

    /*命令执行请求响应*/
    message CommandExecuteResponse {
        string host = 1;
        uint32 code = 2;
        string stdout = 3;
        string stderr = 4;
        string info = 5;
        uint64 start = 6;
        uint64 end = 7;
        string uuid = 8;
    }

    // TODO: ClientManagerRequest待定字段
    /*客户端管理请求*/
    message ClientManagerRequest {
        uint32 op_type = 1;
        string op_info = 2;
    }

    // TODO: ClientManagerResponse待定字段
    /*客户端管理响应*/
    message ClientManagerResponse {
        uint32 op_type = 1;
        string info = 2;
    }

    message MessageNotification
    {
        uint32 msg_type = 1;
        bytes  sender = 2;
        string json = 3;
        string timestamp = 4;
    }

    /*消息报文*/
    message Message {
        HeadType type = 1;
        uint64 sequence = 2;
        string session_id = 3;
        AuthRequest authRequest = 4;
        AuthResponse authResponse = 5;
        CommandExecuteRequest commandExecuteRequest = 6;
        CommandExecuteResponse commandExecuteResponse = 7;
        ClientManagerRequest clientManagerRequest = 8;
        ClientManagerRequest clientManagerResponse = 9;
        MessageNotification messageNotification = 10;
    }

}
